<resources>
  <string name="app_name">Quiz Pop</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="login_failure_message">Unable to log in with provided credentials.</string>
  <string name="sign_out">Sign out</string>
  <string name="heeey">Heeey</string>

<!--  <string name="next">Next</string>-->
  <string name="prev">Prev</string>
  <string name="submit">Submit</string>
  <string name="view_answer">View Answer</string>

  <string name="answers">Answers</string>
  <string name="q_reference">Questions</string>
  <string name="take_quiz">Take Quiz</string>

<!--  <string name="easy">Easy</string>-->
<!--  <string name="medium">Medium</string>-->
<!--  <string name="hard">Hard</string>-->

  <string name="gk">General Knowledge</string>
  <string name="politics">Politics</string>
  <string name="history">History</string>
  <string name="sports">Sports</string>
  <string name="geography">Geography</string>
  <string name="any_category">Any Category</string>
  <string name="entertainment_film">Entertainment: Film</string>
  <string name="entertainment_books">Entertainment: Books</string>
  <string name="entertainment_music">Entertainment: Music</string>
  <string name="entertainment_musical_theatres"><![CDATA[Entertainment: Musicals & Theatres]]></string>
  <string name="entertainment_television">Entertainment: Television</string>
  <string name="entertainment_video">Entertainment: Video Games</string>
  <string name="entertainment_board">Entertainment: Board Games</string>
  <string name="science_nature"><![CDATA[Science & Nature]]></string>
  <string name="science_computer">Science: Computers</string>
  <string name="science_maths">Science: Maths</string>
  <string name="mythology">Mythology</string>
  <string name="arts">Arts</string>
  <string name="celebrity">Celebrities</string>
  <string name="animal">Animals</string>
  <string name="vehicles">Vehicles</string>
  <string name="entertainment_comics">Entertainment: Comics</string>
  <string name="science_gadgets">Science: Gadgets</string>
  <string name="entertainment_japanese"><![CDATA[Entertainment: Japanese Anime & Manga]]></string>
  <string name="entertainment_cartoon"><![CDATA[Entertainment: Cartoon & Animations]]></string>

  // labels of list preference
  <string name="easy_value" translatable="false">easy</string>
  <string name="medium_value" translatable="false">medium</string>
  <string name="hard_value" translatable="false">hard</string>


  <string name="gk_value" translatable="false">9</string>
  <string name="politics_value" translatable="false">24</string>
  <string name="history_value" translatable="false">23</string>
  <string name="sports_value" translatable="false">21</string>
  <string name="geography_value" translatable="false">22</string>
  <string name="any_category_value" translatable="false">0</string>
  <string name="entertainment_film_value" translatable="false">11</string>
  <string name="entertainment_books_value" translatable="false">10</string>
  <string name="entertainment_music_value" translatable="false">12</string>
  <string name="entertainment_musical_theatres_value" translatable="false">13></string>
  <string name="entertainment_television_value" translatable="false">14</string>
  <string name="entertainment_video_value" translatable="false">15</string>
  <string name="entertainment_board_value" translatable="false">16</string>
  <string name="science_nature_value" translatable="false">17</string>
  <string name="science_computer_value" translatable="false">18</string>
  <string name="science_maths_value" translatable="false">19</string>
  <string name="mythology_value" translatable="false">20</string>
  <string name="arts_value" translatable="false">25</string>
  <string name="celebrity_value" translatable="false">26</string>
  <string name="animal_value" translatable="false">27</string>
  <string name="vehicles_value" translatable="false">28</string>
  <string name="entertainment_comics_value" translatable="false">29</string>
  <string name="science_gadgets_value" translatable="false">30</string>
  <string name="entertainment_japanese_value" translatable="false">31</string>
  <string name="entertainment_cartoon_value" translatable="false">32</string>


  // list preference key and title
  <string name="difficulty">Difficulty</string>
  <string name="difficulty_key" translatable="false">difficulty</string>

  <string name="category">Category</string>
  <string name="category_key" translatable="false">category</string>

  <string name="filter">Filter</string>
  <string name="next">Next</string>


</resources>
