<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <ListPreference
    android:defaultValue="@string/medium_value"
    android:entries="@array/list_label"
    android:entryValues="@array/values"
    android:key="@string/difficulty_key"
    android:title="@string/difficulty" />
  <ListPreference
    android:defaultValue="@string/gk_value"
    android:entries="@array/list_label2"
    android:entryValues="@array/values2"
    android:key="@string/category_key"
    android:title="@string/category" />

  <menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
      android:id="@+id/sign_out"
      android:orderInCategory="1000"
      android:title="@string/sign_out"
      app:showAsAction="never"/>
  </menu>
</PreferenceScreen>